feat/auth: implemented secured endpoints and axios auth interceptors